# llm_chat_PDF-streamlit

./: .gitignore  Dockerfile  README.md  chat_history.csv  docker-compose.yml  home.py  japanese_pages.py  prev_file.txt  pyproject.toml
pages/: admin.py  chat.py  qa.py  simple_chat.py
pages/database/: chat_history.db  output.csv
