[tool.poetry]
name = "llm-streamlit"
version = "0.1.0"
description = ""
authors = ["Atom"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.25.0"
openai = "0.27.8"
python-dotenv = "^1.0.1"
langchain = "0.0.266"
llama-index = "0.8.5"
pypdf = "3.15.2"
nltk = "3.8.1"
pydantic = "1.10.12"
streamlit-chat = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
